# oop_07

./: .gitignore  CMakeLists.txt  README.md  bear.cpp  elf.cpp  main.cpp  npc.h  robber.cpp
factory/: factory.cpp  factory.h
game/: game.cpp  game.h
observer/: observer.cpp  observer.h
visitor/: visitor.cpp  visitor.h
